# agentomaly

./: .gitignore  README.md  claude.md  pyproject.toml
.github/workflows/: ci.yml
assets/: showcase.html
docs/: detectors.md  getting_started.md  integrations.md  tuning.md
examples/: custom_agent.py  demo.py  langgraph_agent.py  mcp_agent.py
src/spectra/: __init__.py  __main__.py  baseline.py  cli.py  drift.py  exceptions.py  models.py  monitor.py  trend.py
src/spectra/dashboard/: __init__.py  app.py
src/spectra/detectors/: __init__.py  base.py  content_anomaly.py  injection.py  sequence_anomaly.py  tool_anomaly.py  volume_anomaly.py
src/spectra/instrumentation/: __init__.py  decorator.py  langgraph.py  mcp.py  otel.py
src/spectra/profiler/: __init__.py  markov.py  profile.py  trainer.py
src/spectra/response/: __init__.py  alerter.py  blocker.py  policy.py
tests/: conftest.py  test_auto_tune.py  test_cli.py  test_dashboard.py  test_detectors.py  test_detectors_extended.py  test_drift.py  test_empty_tool_calls.py  test_instrumentation.py  test_instrumentation_extended.py  test_integration.py  test_jsonl_export.py  test_markov.py  test_mcp.py  test_models.py  test_monitor.py  test_monitor_extended.py  test_otel.py  test_profiler.py  test_response.py  test_response_extended.py  test_trend.py
